# pyCBuild

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  setup.py
doc/: index.rst
examples/: py-math.h
src/: CBuild.py  CBuild.schema.json  add_git_repo.py  build_out.py  c-build.json  cbuild.py  cbuild_utils.py  config.py  config.toml  gtk-hello.c  main.c  math-test.c  py-math.c  test.cpp
