[project]
dependencies = [
	"lxml==5.3.0"
	"mypy==1.13.0"
	"mypy-extensions==1.0.0"
	"numpy==2.1.3"
	"python-dateutil==2.5.2"
	"six==1.16.0"
	"toml==0.10.2"
	"tomli==2.0.2"
	"types-setuptools==75.2.0.20241025"
	"types-toml==0.10.8.20240310"
	"typing_extensions==4.12.2"
]
Repository = "https://github.com/BhJaipal/pyCBuild"
authors = [
  {name = "Jaipal Bhanwariya", email = "jaipalbhanwariya001@gmail.com"},
]
description = "C/C++ Build System written Python"
keywords = ["cbuild", "c", "cpp", "c++"]
name = "cbuild"
version = "0.0.2-beta"
